--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "axios": "^1.7.3",
+    "buffer": "^6.0.3",
     "dotenv": "^16.4.5",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^5.6.3",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "process": "^0.11.10",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
