--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@paypal/paypal-js": "^8.1.0",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
     "jose": "^5.6.3",
