--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "process": "^0.11.10",
+    "swiper": "^11.1.9",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
